@@ -1,3 +1,7 @@
+2008-01-16  Martin Lambers <marlam@marlam.de>
+
+	* src/tonemap_selector.cpp: Fix some parameter defaults and ranges.
+
 2008-01-15  Martin Lambers <marlam@marlam.de>
 
 	* src/tonemap_selector.h, src/tonemap_selector.cpp, src/view_area.cpp:
